BUGFIX: Flickering upload dropzone in media module (#1890)
Prevent flickering when dragging a file over the label inside the dropzone.

Fixes: #1889

--- a/TYPO3.Neos/Resources/Public/Styles/Neos.css
+++ b/TYPO3.Neos/Resources/Public/Styles/Neos.css
@@ -13882,6 +13882,9 @@
 .neos.media-browser .neos-upload-area.neos-upload-area-active {
   border-color: #fff;
 }
+.neos.media-browser .neos-upload-area.neos-upload-area-active div {
+  pointer-events: none;
+}
 .neos.media-browser .neos-upload-area.neos-upload-area-active i {
   display: inline;
 }
